--- a/voyage/authentication/templates/authentication/forgotpassword.html
+++ b/voyage/authentication/templates/authentication/forgotpassword.html
@@ -83,7 +83,7 @@ body{
 }
 .signup{
     color:black;
-    padding:10px;
+    padding:20px;
     font-size: 17px;
     font-weight: bold;
     text-align:center;
@@ -162,20 +162,15 @@ border-radius:7px;
       <form method="POST">
        {%csrf_token%}
     <div class="login-box">
-        <h1><i class="fa fa-user" style="margin-right:10px;"></i>Login</h1>
         <div class="textbox" >
             <i class="fa fa-envelope" aria-hidden="true"></i>
             <input type="text" placeholder="email" name="email" value="" autocomplete="off" required>
         </div>
-        <div class="textbox">
-            <i class="fa fa-lock" aria-hidden="true"></i>
-            <input type="password" placeholder="password" name="password" value="" autocomplete="off" required>
-        </div>
+       
         <div class="loginbtn">
-           <input class="btn" type="submit" name="" value="Sign in">
+           <input class="btn" type="submit" name="" value="Send link to email">
         </div>
-         <a class='signup 'href="{% url 'forgot_password' %}"><p>Forgot password</p></a>
-           <a class='signup 'href="{% url 'auth-signup' %}"><p>Don't Have An Account?SignUp</p></a> 
+          
     </div>
     </form>
      {% if messages %}
