--- a/voyage/authentication/templates/authentication/reset_password.html
+++ b/voyage/authentication/templates/authentication/reset_password.html
@@ -1,5 +1,5 @@
 <!-- CSS only -->
-<title>User profile</title>
+<title>Change password</title>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
 <!-- JS, Popper.js, and jQuery -->
@@ -14,9 +14,8 @@
 
         {% endfor %}
 
-    {% endif %}
-    <br>
-    <h1 style="text-align:center;">Edit Profile</h1>
+    {% endif %}<br>
+    <h1 style="text-align:center;">Reset password</h1>
   	<hr>
 	<div class="row">
       <!-- left column -->
@@ -32,65 +31,18 @@
         
         <form class="form-horizontal" role="form" method="POST">
           {%csrf_token%}
-          <div class="form-group">
-            <label class="col-lg-3 control-label">First Name:</label>
-            <div class="col-lg-8">
-              <input class="form-control" type="text" value="{{firstname}}" name="firstname" required>
-            </div>
-          </div>
-          <div class="form-group">
-            <label class="col-lg-3 control-label">Last Name:</label>
-            <div class="col-lg-8">
-              <input class="form-control" type="text" value="{{lastname}}" name="lastname" required>
-            </div>
-          </div>
-          <div class="form-group">
-            <label class="col-lg-3 control-label">Address:</label>
-            <div class="col-lg-8">
-              <input class="form-control" type="text" value="{{address}}" name="address" required>
-            </div>
-          </div>
-          <div class="form-group">
-            <label class="col-lg-3 control-label">DOB:</label>
-            <div class="col-lg-8">
-              <input class="form-control" type="date" value="{{ DOB }}"name="DOB" id="datepicker" required>
-            </div>
-          </div>
-          <div class="form-group">
-            <label class="col-lg-3 control-label">Email:</label>
-            <div class="col-lg-8">
-              <input class="form-control" type="email" value="{{email}}" name="email" readonly>
-            </div>
-          </div>
-          <div class="form-group">
-            <label class="col-lg-3 control-label">Gender:</label>
-            <div class="col-lg-8">
-              <div class="ui-select">
-                <select id="Gender" class="form-control" name="gender"  required >
-                 {% for list_gender in genders %}
-             <option
-              value="{{ list_gender}}"
-              {% if list_gender == gender %}
-                  selected="selected"
-              {% endif %}
-             >{{ list_gender }}</option>
-         {% endfor %}
-                </select>
-              </div>
-            </div>
-          </div>
-          <div class="form-group">
-            <label class="col-md-3 control-label">Mobileno:</label>
+           <div class="form-group">
+            <label class="col-md-3 control-label">New Password:</label>
             <div class="col-md-8">
-              <input class="form-control" type="text" value="{{mobileno}}" name="mobileno" required>
+              <input class="form-control" type="password" value="" name="newpassword" required>
             </div>
-          </div>
-          <div class="form-group">
-            <label class="col-md-4 control-label"> Type Password to confirm:</label>
+          </div> 
+           <div class="form-group">
+            <label class="col-md-3 control-label">Confirm New password:</label>
             <div class="col-md-8">
-              <input class="form-control" type="password"  name="password" required>
+              <input class="form-control" type="password" value="" name="confirmpassword" required>
             </div>
-          </div>
+          </div> 
           <div class="form-group">
             <label class="col-md-3 control-label"></label>
             <div class="col-md-8">
@@ -104,18 +56,3 @@
   </div>
 </div>
 <hr>
-<script>
-var date = document.querySelector('#datepicker');
-var d1 = new Date();
-var y1= d1.getFullYear();
-var m1 = d1.getMonth()+1;
-if(m1<10)
-    m1="0"+m1;
-
-d1.setDate(d1.getDate()-1);
-dt1 = d1.getDate();
-if(dt1<10)
-dt1 = "0"+dt1;
-var d2 = y1+"-"+m1+"-"+dt1;
-date.setAttribute("max",d2)
-</script>
