--- a/voyage/authentication/templates/authentication/signup.html
+++ b/voyage/authentication/templates/authentication/signup.html
@@ -197,7 +197,7 @@ border-radius:7px;
         </div>
         <div class="textbox" >
             <i class="fa fa-calendar" aria-hidden="true"></i>
-            <input type="text" placeholder="Date of birth" id="datepicker" name="DOB" required onfocus="(this.type='date')" onfocusout="(this.type='text')">
+            <input type="date" placeholder="Date of birth" id="datepicker" name="DOB"  required >
         </div>
         <div class="textbox" >
             <i class="fa fa-phone" aria-hidden="true"></i>
@@ -226,4 +226,19 @@ border-radius:7px;
     {% endif %}
 
 </body>
+<script>
+var date = document.querySelector('#datepicker');
+var d1 = new Date();
+var y1= d1.getFullYear();
+var m1 = d1.getMonth()+1;
+if(m1<10)
+    m1="0"+m1;
+
+d1.setDate(d1.getDate()-1);
+dt1 = d1.getDate();
+if(dt1<10)
+dt1 = "0"+dt1;
+var d2 = y1+"-"+m1+"-"+dt1;
+date.setAttribute("max",d2)
+</script>
 </html> 
