--- a/voyage/authentication/templates/authentication/buses.html
+++ b/voyage/authentication/templates/authentication/buses.html
@@ -324,6 +324,8 @@ if(dt1<10)
 dt1 = "0"+dt1;
 var d2 = y1+"-"+m1+"-"+dt1;
 document.getElementById('d1').value=d2;
+var today = document.querySelector("#d1");
+today.setAttribute("min", d2)
 </script>
 </body>
 </html>
