--- a/voyage/authentication/templates/authentication/buses_search.html
+++ b/voyage/authentication/templates/authentication/buses_search.html
@@ -387,6 +387,18 @@ transform:scale(1.01);
   function toggleSidebar(ref){
     document.getElementById("sidebar").classList.toggle('active');
   }
+  var d1 = new Date();
+var y1= d1.getFullYear();
+var m1 = d1.getMonth()+1;
+if(m1<10)
+    m1="0"+m1;
+var dt1 = d1.getDate();
+if(dt1<10)
+dt1 = "0"+dt1;
+var d2 = y1+"-"+m1+"-"+dt1;
+document.getElementById('d1').value=d2;
+var today = document.querySelector("#d1");
+today.setAttribute("min", d2)
  </script>
 </body>   
 </html>
