--- a/voyage/authentication/templates/authentication/flights.html
+++ b/voyage/authentication/templates/authentication/flights.html
@@ -22,7 +22,7 @@
 }
 body{
     background:url(https://images.unsplash.com/photo-1569629743817-70d8db6c323b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1974&q=80);
-    background-size: cover;
+    background-size:cover;
     height:100%;
 }
 nav{
@@ -298,7 +298,7 @@ transform:scale(1.01);
         </div>
         <div class="textbox" >
             <i class="fa fa-calendar" aria-hidden="true"></i>
-            <input type="date" placeholder="Date of Travel" id="d1" name="dateOfTravel" value="" min=today() required >
+            <input type="date" placeholder="Date of Travel" id="d1" name="dateOfTravel" value=""  required >
         </div>
         <div class="textbox" >
             <i class="fa fa-users" aria-hidden="true"></i>
@@ -314,18 +314,7 @@ transform:scale(1.01);
     document.getElementById("sidebar").classList.toggle('active');
   }
  
-today(){
-var d1 = new Date();
-var y1= d1.getFullYear();
-var m1 = d1.getMonth()+1;
-if(m1<10)
-    m1="0"+m1;
-var dt1 = d1.getDate();
-if(dt1<10)
-dt1 = "0"+dt1;
-var d2 = y1+"-"+m1+"-"+dt1;
-return d2;
-}
+
 var d1 = new Date();
 var y1= d1.getFullYear();
 var m1 = d1.getMonth()+1;
@@ -336,6 +325,8 @@ if(dt1<10)
 dt1 = "0"+dt1;
 var d2 = y1+"-"+m1+"-"+dt1;
 document.getElementById('d1').value=d2;
+var today = document.querySelector("#d1");
+today.setAttribute("min", d2)
 </script>
 </body>
 </html>
