--- a/voyage/authentication/templates/authentication/booking_details.html
+++ b/voyage/authentication/templates/authentication/booking_details.html
@@ -257,10 +257,10 @@ transform:scale(1.01);
 <h6>{{company}}</h6>
 </td>
 <td style="padding:5px 30px;width:20vw;">
-<h6>{{from_p}} - {{to_p}}</h6>
+<h6> {{from_p}} - {{to_p}} </h6>
 </td>
-<td style="padding:5px 30px;width:20vw;">
-<h6>{{time_from}} - {{time_to}}</h6>
+<td style="padding:5px 30px;width:50vw;">
+<h6>{{date_from}} {{time_from}} - {{date_to}} {{time_to}}</h6>
 </td>
 <td style="padding:5px 30px;width:20vw;">
 <h6><i class="fa fa-inr"></i>{{price_per_person}}</h6>
