--- a/voyage/authentication/templates/authentication/my_bookings.html
+++ b/voyage/authentication/templates/authentication/my_bookings.html
@@ -264,8 +264,8 @@ transform:scale(1.01);
 <td style="padding:5px 30px;width:20vw;">
 <h6>{{booking.from_p}} - {{booking.to_p}}</h6>
 </td>
-<td style="padding:5px 30px;width:20vw;">
-<h6>{{booking.time_from}} - {{booking.time_to}}</h6>
+<td style="padding:5px 30px;width:55vw;">
+<h6>{{booking.date_from}} {{booking.time_from}} - {{booking.date_to}} {{booking.time_to}}</h6>
 </td>
 <td style="padding:5px 30px;width:20vw;">
 <h6><i class="fa fa-inr"></i>{{booking.price_per_person}}</h6>
@@ -278,8 +278,8 @@ transform:scale(1.01);
 <td style="padding:5px 30px;width:40vw;">
 <h6>booked at:<strong>{{booking.date_of_booking}}</strong></h6>
 </td>
-<td style="padding:5px 30px;width:20vw;">
-<h6>total passengers:<strong>{{booking.no_of_passengers}}</strong></h6>
+<td style="padding:5px 30px;width:15vw;">
+<h6> passengers:<strong>{{booking.no_of_passengers}}</strong></h6>
 </td>
 <td style="padding:5px 30px;width:22vw;">
 <h6>total price:<i class="fa fa-inr"></i><strong>{{booking.total_price}}</strong></h6>
