--- a/voyage/authentication/templates/authentication/admin.html
+++ b/voyage/authentication/templates/authentication/admin.html
@@ -267,15 +267,18 @@ transform:scale(1.01);
   </div>
   </nav>
 </div>
-<td style="text-align:right;padding-left:50px;vertical-align:text-top;align:left">
-    <div class="results" style="border-left-style:solid;float:right;margin:auto;border-color:grey; margin:4px, 4px; padding:4px;  height: 70vh;  overflow-x: hidden; overflow-y: auto; text-align:justify; ">
-    <div class="flights" style="background-color:white;border-radius:7px;margin:20px;padding:20px;">
+<br>
+<br>
+<br>
+<td style="text-align:left;padding-left:50px;vertical-align:text-top;align:left">
+    <div class="results" style="float:left;margin:auto; margin:4px, 4px; padding:4px;  height: 70vh;  text-align:justify; ">
+    <div class="flights"  id ="flights" style="background-color:white;border-radius:7px;margin:20px;padding:20px;">
     <table>
     <tr>
     <td style="padding:5px 30px;width:6vw">
-    <i class="{{flight.image}}" style="padding:20px;"></i>
+    <i class="fa fa-plane fa-2x" style="padding:20px;color:black;"></i>
     </td>
-    <td style="padding:5px 30px;width:5vw;">
+    <td style="padding:5px 30px;width:20vw;">
     <div class="loginbtn">
                  <input class="btn" type="submit" name="" value="Flights" onclick="window.location.href='http://127.0.0.1:8000/login/admin/{{userId}}/{{email}}/flights'">
             </div>
@@ -283,15 +286,29 @@ transform:scale(1.01);
     </tr>
     </table>
     </div>
-    <div class="flights" style="background-color:white;border-radius:7px;margin:20px;padding:20px;">
+    <div class="flights" id="buses" style="background-color:white;border-radius:7px;margin:20px;padding:20px;">
         <table>
         <tr>
         <td style="padding:5px 30px;width:6vw">
-        <i class="{{flight.image}}" style="padding:20px;"></i>
+        <i class="fa fa-bus fa-2x" style="padding:20px;"></i>
         </td>
-        <td style="padding:5px 30px;width:5vw;">
+        <td style="padding:5px 30px;width:20vw;">
         <div class="loginbtn">
                      <input class="btn" type="submit" name="" value="Buses" onclick="window.location.href='http://127.0.0.1:8000/login/admin/{{userId}}/{{email}}/buses'">
+                </div>
+        </td>
+        </tr>
+        </table>
+        </div>
+         <div class="flights" id="routes" style="background-color:white;border-radius:7px;margin:20px;padding:20px;">
+        <table>
+        <tr>
+        <td style="padding:5px 30px;width:6vw">
+        <i class="fa fa-map-marker fa-2x" style="padding:20px;"></i>
+        </td>
+        <td style="padding:5px 30px;width:20vw;">
+        <div class="loginbtn">
+                     <input class="btn" type="submit" name="" value="Routes" onclick="window.location.href='http://127.0.0.1:8000/login/admin/{{userId}}/{{email}}/routes'">
                 </div>
         </td>
         </tr>
