--- a/voyage/authentication/templates/authentication/admin_flights_details.html
+++ b/voyage/authentication/templates/authentication/admin_flights_details.html
@@ -204,9 +204,7 @@ transform:scale(1.01);
 .results{
 
 }
-::placeholder{
-  color:white;
-}
+
 .flights:hover{
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
@@ -254,24 +252,51 @@ transform:scale(1.01);
 <form method="POST">
  {%csrf_token%}
 <tr>
-{% comment %} <td>
- <input class="form-control" type="number" value="" name="RID" placeholder="route ID" required > {% endcomment %}
+ <td>
+ <input class="form-control" type="text" value="" name="Flight_id" placeholder="Flight ID" required >
+ </td>
+ <td>
+ <input class="form-control" type="text" value="" name="Flight_no" placeholder="Flight No" required >
+ </td>
 <td>
- <input class="form-control" type="text" value="" name="from_p" placeholder="start point" required >
+
+ <input class="form-control" type="text" value="" name="time_from" placeholder="arrival time" required onfocus="this.type='time'" onfocusout="this.type='text'" >
 </td>
 <td>
- <input class="form-control" type="text" value="" name="to_p" placeholder="destination" required >
+ <input class="form-control" type="text" value="" name="time_to" placeholder="departure time" required onfocus="this.type='time'" onfocusout="this.type='text'" >
+
+</td>
+<td>
+
+<input list="destinations" name="starting_point" value="" placeholder="Starting point">
+  <datalist id="destinations">
+            {% for from_p in from_p_list %}
+             <option value="{{from_p}}">{{from_p}}</option>
+            {% endfor %}
+  </datalist>
+
+</td>
+<td>
+<input list="destinations" name="destination_point" value="" placeholder="Destination point">
+  <datalist id="destinations">
+            {% for to_p in to_p_list %}
+             <option value="{{to_p}}">{{to_p}}</option>
+            {% endfor %}
+  </datalist>
+</td>
+<td>
+<input class="form-control" type="number" value="" name="price" placeholder="price" required >
 </td>
 <td>
 <div class="loginbtn">
-  <input class="btn" type="submit" name="" value="Add Route" >
+  <input class="btn" type="submit" name="" value="Add Flight details" >
 </td>
 </tr>
 </form>
 </table>
 </div style="float:right;">
 <div>
- <h4 style="text-align:center">Routes</h3>
+ <h4 style="text-align:center">Flights details</h3>
  <hr> 
 <table style="width=100vw;">
 <tr>
@@ -282,16 +307,12 @@ transform:scale(1.01);
 <h4>Apply filters:</h4>
 <hr>
 
-
-<label for="pricerange">Search by route:</label><br>
-{% if start %}
-  <input class="form-control" type="text" value="{{start}}" name="from_p" placeholder="starting point" required ><br>
-   <input class="form-control" type="text" value="{{end}}" name="to_p" placeholder="destination" required >
-   {% else %}
-   <input class="form-control" type="text" value="" name="from_p" placeholder="starting point" required ><br>
-   <input class="form-control" type="text" value="" name="to_p" placeholder="destination" required >
-{%endif%}
-
+{% if flight_no %}
+<label for="pricerange">search by Flight number</label><br>
+  <input class="form-control" type="text" value="{{flight_no}}" name="flight_no" placeholder="flight number" required >
+{% else %}
+ <input class="form-control" type="text" value="" name="flight_no" placeholder="flight number" required >
+ {% endif %}
 
 
 <div class="loginbtn">
@@ -301,33 +322,37 @@ transform:scale(1.01);
 </div>
 </td>
 
-{% if routes %}
+{% if flights %}
 <td style="text-align:right;padding-left:50px;vertical-align:text-top;align:left;">
 <div class="results" style="border-left-style:solid;float:right;margin:auto;border-color:grey; margin:4px, 4px; padding:4px;  height: 70vh;  overflow-x: hidden; overflow-y: auto; text-align:justify; ">
 
-{% for route in routes %}
+{% for flight in flights %}
 <div class="flights" style="background-color:white;border-radius:7px;margin:20px;padding:6px;">
 <table>
 <tr>
 <td style="padding:5px 30px;width:6vw">
-<i class="fa fa-map-marker fa-3x" style="padding:20px;"></i>
+<i class="fa fa-plane fa-3x" style="padding:20px;"></i>
  {% comment %} <img src= "{% static flight.image %}" height="70">  {% endcomment %}
 </td>
-<td style="padding:5px 30px;width:6vw;">
-<h6>{{route.RID}}</h6>
+<td style="padding:5px 30px;width:10vw;">
+<h6>id:{{flight.id}}</h6>
 </td>
-<td style="padding:5px 30px;width:35vw;">
-<h6>{{route.from_p}} &nbsp - &nbsp{{route.to_p}}</h6>
+<td style="padding:5px 30px;width:20vw;">
+<h6>{{flight.from_time}} - {{flight.to_time}}</h6>
 </td>
 
-{% comment %} <td style="padding:5px 30px;width:20vw;">
-<h6>to:{{route.to_p}}</h6>
-</td> {% endcomment %}
-{% comment %} <td style="padding:5px 30px;width:5vw;">
-<div class="loginbtn">
+ <td style="padding:5px 30px;width:5vw;">
+<h6>flight no:{{flight.no}}</h6>
+</td> 
+<td style="padding:5px 30px;width:15vw;">
+<h6>{{flight.from_p}}-{{flight.to_p}}</h6>
+{% comment %} <div class="loginbtn">
              <input class="btn" type="submit" name="" value="Book" onclick="window.location.href='http://127.0.0.1:8000/login/{{userId}}/{{email}}/flights/book/?c1={{flight.flight_schedule}}&c2={{passengers}}'">
-        </div>
-</td> {% endcomment %}
+        </div> {% endcomment %}
+</td> 
+<td style="padding:5px 30px;width:10vw;">
+<h6>price:{{flight.price}}</h6>
+</td>
 </tr>
 </table>
 </div>
@@ -338,7 +363,7 @@ transform:scale(1.01);
 {% else %}
 <td valign="middle" style="padding-left:50px;align:center;" >
   <div class="results" style="border-left-style:solid;margin:auto;border-color:grey; margin:4px; padding:4px;  height: 70vh;  overflow-x: hidden; overflow-y: auto; ">
-  <h2 style="text-align:center;padding:20px;margin:10px;"><i class="fa fa-exclamation-triangle" aria-hidden="true" style="margin-right:10px;color:red;"></i>No Routes found</h2>
+  <h2 style="text-align:center;padding:20px;margin:10px;"><i class="fa fa-exclamation-triangle" aria-hidden="true" style="margin-right:10px;color:red;"></i>No Flights found</h2>
   </div>
   </td>
 {% endif %}
