--- a/voyage/authentication/templates/authentication/admin_flights_list.html
+++ b/voyage/authentication/templates/authentication/admin_flights_list.html
@@ -220,7 +220,7 @@ transform:scale(1.01);
     </div>
     <div id="navbar">
     <ul>
-      <li><a href="http://127.0.0.1:8000/login/admin/{{userId}}/{{email}}" class="active"><i class="fa fa-home" aria-hidden="true" style="padding-right:10px;"></i>Home</a></li>
+      <li><a href="http://127.0.0.1:8000/login/{{userId}}/{{email}}" class="active"><i class="fa fa-home" aria-hidden="true" style="padding-right:10px;"></i>Home</a></li>
       <li><a href="http://127.0.0.1:8000/login/admin/{{userId}}/{{email}}/flights"><i class="fa fa-plane" aria-hidden="true" style="padding-right:10px;"></i>Flights</a></li>
       {% comment %} <li><a href="#"><i class="fa fa-train" aria-hidden="true" style="padding-right:10px;" class="icon"></i>Trains</a></li> {% endcomment %}
       <li><a href="http://127.0.0.1:8000/login/admin/{{userId}}/{{email}}/buses"><i class="fa fa-bus" aria-hidden="true" style="padding-right:10px;"class="icon"></i>Buses</a></li>
@@ -254,24 +254,25 @@ transform:scale(1.01);
 <form method="POST">
  {%csrf_token%}
 <tr>
-{% comment %} <td>
- <input class="form-control" type="number" value="" name="RID" placeholder="route ID" required > {% endcomment %}
+ <td>
+ <input class="form-control" type="text" value="" name="Flight_id" placeholder="Flight ID" required >
+ </td>
 <td>
- <input class="form-control" type="text" value="" name="from_p" placeholder="start point" required >
+ <input class="form-control" type="text" value="" name="Flight_name" placeholder="Flight name" required >
 </td>
 <td>
- <input class="form-control" type="text" value="" name="to_p" placeholder="destination" required >
+ <input class="form-control" type="number" value="" name="seat_capacity" placeholder="Seat capacity" required >
 </td>
 <td>
 <div class="loginbtn">
-  <input class="btn" type="submit" name="" value="Add Route" >
+  <input class="btn" type="submit" name="" value="Add Flight" >
 </td>
 </tr>
 </form>
 </table>
 </div style="float:right;">
 <div>
- <h4 style="text-align:center">Routes</h3>
+ <h4 style="text-align:center">Flights</h3>
  <hr> 
 <table style="width=100vw;">
 <tr>
@@ -283,16 +284,12 @@ transform:scale(1.01);
 <hr>
 
 
-<label for="pricerange">Search by route:</label><br>
-{% if start %}
-  <input class="form-control" type="text" value="{{start}}" name="from_p" placeholder="starting point" required ><br>
-   <input class="form-control" type="text" value="{{end}}" name="to_p" placeholder="destination" required >
-   {% else %}
-   <input class="form-control" type="text" value="" name="from_p" placeholder="starting point" required ><br>
-   <input class="form-control" type="text" value="" name="to_p" placeholder="destination" required >
-{%endif%}
-
-
+<label for="pricerange">search by Flight_Id</label><br>
+{% if flight_id %}
+  <input class="form-control" type="text" value="" name="{{flight_id}}" placeholder="flight id" required >
+{% else %}
+<input class="form-control" type="text" value="" name="{{flight_id}}" placeholder="flight id" required >
+{% endif%}
 
 <div class="loginbtn">
            <input class="btn" type="submit" name="" value="Apply" style="background-color:#3392FF;">
@@ -301,33 +298,34 @@ transform:scale(1.01);
 </div>
 </td>
 
-{% if routes %}
+{% if flights %}
 <td style="text-align:right;padding-left:50px;vertical-align:text-top;align:left;">
 <div class="results" style="border-left-style:solid;float:right;margin:auto;border-color:grey; margin:4px, 4px; padding:4px;  height: 70vh;  overflow-x: hidden; overflow-y: auto; text-align:justify; ">
 
-{% for route in routes %}
+{% for flight in flights %}
 <div class="flights" style="background-color:white;border-radius:7px;margin:20px;padding:6px;">
 <table>
 <tr>
 <td style="padding:5px 30px;width:6vw">
-<i class="fa fa-map-marker fa-3x" style="padding:20px;"></i>
+<i class="fa fa-plane fa-3x" style="padding:20px;"></i>
  {% comment %} <img src= "{% static flight.image %}" height="70">  {% endcomment %}
 </td>
-<td style="padding:5px 30px;width:6vw;">
-<h6>{{route.RID}}</h6>
+<td style="padding:5px 30px;width:10vw;">
+<h6>{{flight.id}}</h6>
 </td>
-<td style="padding:5px 30px;width:35vw;">
-<h6>{{route.from_p}} &nbsp - &nbsp{{route.to_p}}</h6>
+<td style="padding:5px 30px;width:10vw;">
+<h6>{{flight.company}}</h6>
 </td>
 
-{% comment %} <td style="padding:5px 30px;width:20vw;">
-<h6>to:{{route.to_p}}</h6>
-</td> {% endcomment %}
-{% comment %} <td style="padding:5px 30px;width:5vw;">
-<div class="loginbtn">
+ <td style="padding:5px 30px;width:15vw;">
+<h6>{{flight.name}}</h6>
+</td> 
+<td style="padding:5px 30px;width:15vw;">
+<h6>seat capacity:<strong>{{flight.capacity}}</strong></h6>
+{% comment %} <div class="loginbtn">
              <input class="btn" type="submit" name="" value="Book" onclick="window.location.href='http://127.0.0.1:8000/login/{{userId}}/{{email}}/flights/book/?c1={{flight.flight_schedule}}&c2={{passengers}}'">
-        </div>
-</td> {% endcomment %}
+        </div> {% endcomment %}
+</td> 
 </tr>
 </table>
 </div>
@@ -338,7 +336,7 @@ transform:scale(1.01);
 {% else %}
 <td valign="middle" style="padding-left:50px;align:center;" >
   <div class="results" style="border-left-style:solid;margin:auto;border-color:grey; margin:4px; padding:4px;  height: 70vh;  overflow-x: hidden; overflow-y: auto; ">
-  <h2 style="text-align:center;padding:20px;margin:10px;"><i class="fa fa-exclamation-triangle" aria-hidden="true" style="margin-right:10px;color:red;"></i>No Routes found</h2>
+  <h2 style="text-align:center;padding:20px;margin:10px;"><i class="fa fa-exclamation-triangle" aria-hidden="true" style="margin-right:10px;color:red;"></i>No Flights found</h2>
   </div>
   </td>
 {% endif %}
