Added admin buses

--- a/voyage/authentication/templates/authentication/admin_buses.html
+++ b/voyage/authentication/templates/authentication/admin_buses.html
@@ -242,6 +242,9 @@ transform:scale(1.01);
     <div id="navbar">
     <ul>
       <li><a href="http://127.0.0.1:8000/login/admin/{{userId}}/{{email}}" class="active"><i class="fa fa-home" aria-hidden="true" style="padding-right:10px;"></i>Home</a></li>
+      <li><a href="http://127.0.0.1:8000/login/admin/{{userId}}/{{email}}/flights" class="active"><i class="fa fa-home" aria-hidden="true" style="padding-right:10px;"></i>Flights</a></li>
+      <li><a href="http://127.0.0.1:8000/login/admin/{{userId}}/{{email}}/buses" class="active"><i class="fa fa-home" aria-hidden="true" style="padding-right:10px;"></i>Buses</a></li>
+      <li><a href="http://127.0.0.1:8000/login/admin/{{userId}}/{{email}}/routes" class="active"><i class="fa fa-home" aria-hidden="true" style="padding-right:10px;"></i>Routes</a></li>
       </ul>
       </div>
   </nav>
