--- a/voyage/authentication/templates/authentication/admin_buses_list.html
+++ b/voyage/authentication/templates/authentication/admin_buses_list.html
@@ -227,7 +227,7 @@ transform:scale(1.01);
        <li><a href="http://127.0.0.1:8000/login/admin/{{userId}}/{{email}}/routes"><i class="fa fa-map-marker" aria-hidden="true" style="padding-right:10px;"class="icon"></i>Routes</a></li>
 
       </ul>
-      </div>
+      </div>      
   </nav>
 </div>
 <br>
@@ -239,24 +239,24 @@ transform:scale(1.01);
  {%csrf_token%}
 <tr>
  <td>
- <input class="form-control" type="number" value="" name="Flight_No" placeholder="Flight no" required > 
+ <input class="form-control" type="text" value="" name="Bus_id" placeholder="Bus ID" required >
  </td>
 <td>
- <input class="form-control" type="date" value="" name="date_from" placeholder="arrival date" required >
+ <input class="form-control" type="text" value="" name="Bus_name" placeholder="Bus name" required >
 </td>
 <td>
- <input class="form-control" type="date" value="" name="date_to" placeholder="departure date" required >
+ <input class="form-control" type="number" value="" name="seat_capacity" placeholder="Seat capacity" required >
 </td>
 <td>
 <div class="loginbtn">
-  <input class="btn" type="submit" name="" value="Add Schedule" >
+  <input class="btn" type="submit" name="" value="Add Bus" >
 </td>
 </tr>
 </form>
 </table>
 </div style="float:right;">
 <div>
- <h4 style="text-align:center">Details</h3>
+ <h4 style="text-align:center">Buses</h3>
  <hr> 
 <table style="width=100vw;">
 <tr>
@@ -268,13 +268,12 @@ transform:scale(1.01);
 <hr>
 
 
-<label for="pricerange">search by arrival date</label><br>
-{% if date_filter %}
-  <input class="form-control" type="date" value="{{date_filter}}" name="date_from" placeholder="arrival date" required >
+<label for="pricerange">search by bus_Id</label><br>
+{% if bus_id %}
+  <input class="form-control" type="text" value="{{bus_id}}" name="bus_id" placeholder="bus id" required >
 {% else %}
-<input class="form-control" type="date" value="" name="date_from" placeholder="arrival date" required >
-{% endif %}
-
+<input class="form-control" type="text" value="" name="bus_id" placeholder="bus id" required >
+{% endif%}
 
 <div class="loginbtn">
            <input class="btn" type="submit" name="" value="Apply" style="background-color:#3392FF;">
@@ -283,33 +282,34 @@ transform:scale(1.01);
 </div>
 </td>
 
-{% if schedules %}
+{% if buses %}
 <td style="text-align:right;padding-left:50px;vertical-align:text-top;align:left;">
 <div class="results" style="border-left-style:solid;float:right;margin:auto;border-color:grey; margin:4px, 4px; padding:4px;  height: 70vh;  overflow-x: hidden; overflow-y: auto; text-align:justify; ">
 
-{% for schedule in schedules %}
+{% for bus in buses %}
 <div class="flights" style="background-color:white;border-radius:7px;margin:20px;padding:6px;">
 <table>
 <tr>
 <td style="padding:5px 30px;width:6vw">
-<i class="fa fa-plane fa-3x" style="padding:20px;"></i>
+<i class="fa fa-bus fa-3x" style="padding:20px;"></i>
  {% comment %} <img src= "{% static flight.image %}" height="70">  {% endcomment %}
 </td>
-<td style="padding:5px 30px;width:6vw;">
-<h6>flightno:{{schedule.flight_no}}</h6>
+<td style="padding:5px 30px;width:10vw;">
+<h6>{{bus.id}}</h6>
 </td>
-<td style="padding:5px 30px;width:20vw;">
-<h6>{{schedule.date_from}} &nbsp - &nbsp{{schedule.date_to}}</h6>
+<td style="padding:5px 30px;width:10vw;">
+<h6>{{bus.company}}</h6>
 </td>
 
- <td style="padding:5px 30px;width:10vw;">
-<h6>seats:{{schedule.seats}}</h6>
-</td>
-{% comment %} <td style="padding:5px 30px;width:5vw;">
-<div class="loginbtn">
+ <td style="padding:5px 30px;width:15vw;">
+<h6>{{bus.name}}</h6>
+</td> 
+<td style="padding:5px 30px;width:15vw;">
+<h6>seat capacity:<strong>{{bus.capacity}}</strong></h6>
+{% comment %} <div class="loginbtn">
              <input class="btn" type="submit" name="" value="Book" onclick="window.location.href='http://127.0.0.1:8000/login/{{userId}}/{{email}}/flights/book/?c1={{flight.flight_schedule}}&c2={{passengers}}'">
-        </div>
-</td> {% endcomment %}
+        </div> {% endcomment %}
+</td> 
 </tr>
 </table>
 </div>
@@ -320,7 +320,7 @@ transform:scale(1.01);
 {% else %}
 <td valign="middle" style="padding-left:50px;align:center;" >
   <div class="results" style="border-left-style:solid;margin:auto;border-color:grey; margin:4px; padding:4px;  height: 70vh;  overflow-x: hidden; overflow-y: auto; ">
-  <h2 style="text-align:center;padding:20px;margin:10px;"><i class="fa fa-exclamation-triangle" aria-hidden="true" style="margin-right:10px;color:red;"></i>No Schedules found</h2>
+  <h2 style="text-align:center;padding:20px;margin:10px;"><i class="fa fa-exclamation-triangle" aria-hidden="true" style="margin-right:10px;color:red;"></i>No Buses found</h2>
   </div>
   </td>
 {% endif %}
