--- a/voyage/authentication/templates/authentication/admin_flights_list.html
+++ b/voyage/authentication/templates/authentication/admin_flights_list.html
@@ -220,30 +220,14 @@ transform:scale(1.01);
     </div>
     <div id="navbar">
     <ul>
-      <li><a href="http://127.0.0.1:8000/login/{{userId}}/{{email}}" class="active"><i class="fa fa-home" aria-hidden="true" style="padding-right:10px;"></i>Home</a></li>
+      <li><a href="http://127.0.0.1:8000/login/admin/{{userId}}/{{email}}" class="active"><i class="fa fa-home" aria-hidden="true" style="padding-right:10px;"></i>Home</a></li>
       <li><a href="http://127.0.0.1:8000/login/admin/{{userId}}/{{email}}/flights"><i class="fa fa-plane" aria-hidden="true" style="padding-right:10px;"></i>Flights</a></li>
       {% comment %} <li><a href="#"><i class="fa fa-train" aria-hidden="true" style="padding-right:10px;" class="icon"></i>Trains</a></li> {% endcomment %}
       <li><a href="http://127.0.0.1:8000/login/admin/{{userId}}/{{email}}/buses"><i class="fa fa-bus" aria-hidden="true" style="padding-right:10px;"class="icon"></i>Buses</a></li>
        <li><a href="http://127.0.0.1:8000/login/admin/{{userId}}/{{email}}/routes"><i class="fa fa-map-marker" aria-hidden="true" style="padding-right:10px;"class="icon"></i>Routes</a></li>
 
       </ul>
-      </div>
-      <div id="side-navbar">
-      <div id="sidebar">
-    <div class="toggle-btn" onclick="toggleSidebar(this)">
-      <span></span>
-      <span></span>
-      <span></span>
-    </div>
-    <div class="list">
-      <div class="item"><i class="fa fa-user-circle fa-4x" style="color:red;" ></i>{{firstname}} {{lastname}}</div>
-      {% comment %} <div class="item"><i class="fa fa-credit-card-alt" style="color:red;padding-right:10px;"></i><i class="fa fa-inr" style="color:white;padding-right:5px;"></i>{{wallet}}</div> {% endcomment %}
-      <div class="item"><a   href="http://127.0.0.1:8000/login/{{userId}}/{{email}}/profile" style="text-decoration:none;color:white;" ><i class="fa fa-user" style="padding-right:10px;color:red"></i>profile</a></div>
-      <div class="item"><a  href="http://127.0.0.1:8000/login/{{userId}}/{{email}}/changepassword" style="text-decoration:none;color:white;"><i class="fa fa-key" style="padding-right:10px;color:red"></i>change password</a></div>
-      {% comment %} <div class="item"><a href="http://127.0.0.1:8000/login/{{userId}}/{{email}}/mybookings" style="text-decoration:none;color:white;"><i class="fa fa-suitcase" style="padding-right:10px;color:red"></i>My bookings</a></div> {% endcomment %}
-      <div class="item" ><a  href="{% url 'auth-login' %}" style="text-decoration:none;color:white;"><i class="fa fa-sign-out" style="padding-right:10px;color:red"></i>log out</a></div>
-    </div>
-  </div>
+      </div>      
   </nav>
 </div>
 <br>
@@ -286,9 +270,9 @@ transform:scale(1.01);
 
 <label for="pricerange">search by Flight_Id</label><br>
 {% if flight_id %}
-  <input class="form-control" type="text" value="" name="{{flight_id}}" placeholder="flight id" required >
+  <input class="form-control" type="text" value="{{flight_id}}" name="flight_id" placeholder="flight id" required >
 {% else %}
-<input class="form-control" type="text" value="" name="{{flight_id}}" placeholder="flight id" required >
+<input class="form-control" type="text" value="" name="flight_id" placeholder="flight id" required >
 {% endif%}
 
 <div class="loginbtn">
@@ -351,9 +335,6 @@ transform:scale(1.01);
 
     {% endif %}
   <script>
-  function toggleSidebar(ref){
-    document.getElementById("sidebar").classList.toggle('active');
-  }
 
 var d1 = new Date();
 var y1= d1.getFullYear();
