--- a/voyage/authentication/templates/authentication/verify_email.html
+++ b/voyage/authentication/templates/authentication/verify_email.html
@@ -163,12 +163,12 @@ border-radius:7px;
        {%csrf_token%}
     <div class="login-box">
         <div class="textbox" >
-            <i class="fa fa-envelope" aria-hidden="true"></i>
-            <input type="text" placeholder="email" name="email" value="" autocomplete="off" required>
+            <i class="fa fa-lock" aria-hidden="true"></i>
+            <input type="password" placeholder="One Time Password" name="otp" value="" autocomplete="off" required>
         </div>
        
         <div class="loginbtn">
-           <input class="btn" type="submit" name="" value="Send link to email">
+           <input class="btn" type="submit" name="" value="Submit">
         </div>
           
     </div>
