Changed Auth and voyage.sql

--- a/voyage/authentication/templates/authentication/admin_buses.html
+++ b/voyage/authentication/templates/authentication/admin_buses.html
@@ -241,10 +241,10 @@ transform:scale(1.01);
     </div>
     <div id="navbar">
     <ul>
-      <li><a href="http://127.0.0.1:8000/login/admin/{{userId}}/{{email}}" class="active"><i class="fa fa-home" aria-hidden="true" style="padding-right:10px;"></i>Home</a></li>
-      <li><a href="http://127.0.0.1:8000/login/admin/{{userId}}/{{email}}/flights" class="active"><i class="fa fa-home" aria-hidden="true" style="padding-right:10px;"></i>Flights</a></li>
-      <li><a href="http://127.0.0.1:8000/login/admin/{{userId}}/{{email}}/buses" class="active"><i class="fa fa-home" aria-hidden="true" style="padding-right:10px;"></i>Buses</a></li>
-      <li><a href="http://127.0.0.1:8000/login/admin/{{userId}}/{{email}}/routes" class="active"><i class="fa fa-home" aria-hidden="true" style="padding-right:10px;"></i>Routes</a></li>
+      <li><a href="http://127.0.0.1:8000/admin/home" class="active"><i class="fa fa-home" aria-hidden="true" style="padding-right:10px;"></i>Home</a></li>
+      <li><a href="http://127.0.0.1:8000/admin/flights" class="active"><i class="fa fa-home" aria-hidden="true" style="padding-right:10px;"></i>Flights</a></li>
+      <li><a href="http://127.0.0.1:8000/admin/buses" class="active"><i class="fa fa-home" aria-hidden="true" style="padding-right:10px;"></i>Buses</a></li>
+      <li><a href="http://127.0.0.1:8000/admin/routes" class="active"><i class="fa fa-home" aria-hidden="true" style="padding-right:10px;"></i>Routes</a></li>
       </ul>
       </div>
   </nav>
@@ -262,7 +262,7 @@ transform:scale(1.01);
     </td>
     <td style="padding:5px 30px;width:20vw;">
     <div class="loginbtn">
-                 <input class="btn" type="submit" name="" value="Buses" onclick="window.location.href='http://127.0.0.1:8000/login/admin/{{userId}}/{{email}}/buses/list'">
+                 <input class="btn" type="submit" name="" value="Buses" onclick="window.location.href='http://127.0.0.1:8000/admin/buses/list'">
             </div>
     </td>
     </tr>
@@ -276,7 +276,7 @@ transform:scale(1.01);
         </td>
         <td style="padding:5px 30px;width:20vw;">
         <div class="loginbtn">
-                     <input class="btn" type="submit" name="" value="Buses details" onclick="window.location.href='http://127.0.0.1:8000/login/admin/{{userId}}/{{email}}/buses/details'">
+                     <input class="btn" type="submit" name="" value="Buses details" onclick="window.location.href='http://127.0.0.1:8000/admin/buses/details'">
                 </div>
         </td>
         </tr>
@@ -290,7 +290,7 @@ transform:scale(1.01);
         </td>
         <td style="padding:5px 30px;width:20vw;">
         <div class="loginbtn">
-                     <input class="btn" type="submit" name="" value="Buses schedule" onclick="window.location.href='http://127.0.0.1:8000/login/admin/{{userId}}/{{email}}/buses/schedule'">
+                     <input class="btn" type="submit" name="" value="Buses schedule" onclick="window.location.href='http://127.0.0.1:8000/admin/buses/schedule'">
                 </div>
         </td>
         </tr>
