--- a/voyage/authentication/templates/authentication/admin.html
+++ b/voyage/authentication/templates/authentication/admin.html
@@ -260,7 +260,7 @@ transform:scale(1.01);
       <div class="item"><i class="fa fa-user-circle fa-4x" style="color:red;" ></i>{{firstname}} {{lastname}}</div>
       <!-- <div class="item"><i class="fa fa-credit-card-alt" style="color:red;padding-right:10px;"></i><i class="fa fa-inr" style="color:white;padding-right:5px;"></i>{{wallet}}</div> -->
       <!-- <div class="item"><a   href="http://127.0.0.1:8000/login/{{userId}}/{{email}}/profile" style="text-decoration:none;color:white;" ><i class="fa fa-user" style="padding-right:10px;color:red"></i>profile</a></div> -->
-      <div class="item"><a  href="http://127.0.0.1:8000/login/admin/{{userId}}/{{email}}/changepassword" style="text-decoration:none;color:white;"><i class="fa fa-key" style="padding-right:10px;color:red"></i>change password</a></div>
+      <div class="item"><a  href="http://127.0.0.1:8000/admin/changepassword" style="text-decoration:none;color:white;"><i class="fa fa-key" style="padding-right:10px;color:red"></i>change password</a></div>
       <!-- <div class="item"><a href="http://127.0.0.1:8000/login/{{userId}}/{{email}}/mybookings" style="text-decoration:none;color:white;"><i class="fa fa-suitcase" style="padding-right:10px;color:red"></i>My bookings</a></div> -->
       <div class="item" ><a  href="{% url 'auth-login' %}" style="text-decoration:none;color:white;"><i class="fa fa-sign-out" style="padding-right:10px;color:red"></i>log out</a></div>
     </div>
@@ -280,7 +280,7 @@ transform:scale(1.01);
     </td>
     <td style="padding:5px 30px;width:20vw;">
     <div class="loginbtn">
-                 <input class="btn" type="submit" name="" value="Flights" onclick="window.location.href='http://127.0.0.1:8000/login/admin/{{userId}}/{{email}}/flights'">
+                 <input class="btn" type="submit" name="" value="Flights" onclick="window.location.href='http://127.0.0.1:8000/admin/flights'">
             </div>
     </td>
     </tr>
@@ -294,7 +294,7 @@ transform:scale(1.01);
         </td>
         <td style="padding:5px 30px;width:20vw;">
         <div class="loginbtn">
-                     <input class="btn" type="submit" name="" value="Buses" onclick="window.location.href='http://127.0.0.1:8000/login/admin/{{userId}}/{{email}}/buses'">
+                     <input class="btn" type="submit" name="" value="Buses" onclick="window.location.href='http://127.0.0.1:8000/admin/buses'">
                 </div>
         </td>
         </tr>
@@ -308,7 +308,7 @@ transform:scale(1.01);
         </td>
         <td style="padding:5px 30px;width:20vw;">
         <div class="loginbtn">
-                     <input class="btn" type="submit" name="" value="Routes" onclick="window.location.href='http://127.0.0.1:8000/login/admin/{{userId}}/{{email}}/routes'">
+                     <input class="btn" type="submit" name="" value="Routes" onclick="window.location.href='http://127.0.0.1:8000/admin/routes'">
                 </div>
         </td>
         </tr>
