--- a/voyage/authentication/templates/authentication/admin_flights_details.html
+++ b/voyage/authentication/templates/authentication/admin_flights_details.html
@@ -218,11 +218,11 @@ transform:scale(1.01);
     </div>
     <div id="navbar">
     <ul>
-      <li><a href="http://127.0.0.1:8000/login/admin/{{userId}}/{{email}}" class="active"><i class="fa fa-home" aria-hidden="true" style="padding-right:10px;"></i>Home</a></li>
-      <li><a href="http://127.0.0.1:8000/login/admin/{{userId}}/{{email}}/flights"><i class="fa fa-plane" aria-hidden="true" style="padding-right:10px;"></i>Flights</a></li>
+      <li><a href="http://127.0.0.1:8000/admin/home" class="active"><i class="fa fa-home" aria-hidden="true" style="padding-right:10px;"></i>Home</a></li>
+      <li><a href="http://127.0.0.1:8000/admin/flights"><i class="fa fa-plane" aria-hidden="true" style="padding-right:10px;"></i>Flights</a></li>
       {% comment %} <li><a href="#"><i class="fa fa-train" aria-hidden="true" style="padding-right:10px;" class="icon"></i>Trains</a></li> {% endcomment %}
-      <li><a href="http://127.0.0.1:8000/login/admin/{{userId}}/{{email}}/buses"><i class="fa fa-bus" aria-hidden="true" style="padding-right:10px;"class="icon"></i>Buses</a></li>
-       <li><a href="http://127.0.0.1:8000/login/admin/{{userId}}/{{email}}/routes"><i class="fa fa-map-marker" aria-hidden="true" style="padding-right:10px;"class="icon"></i>Routes</a></li>
+      <li><a href="http://127.0.0.1:8000/admin/buses"><i class="fa fa-bus" aria-hidden="true" style="padding-right:10px;"class="icon"></i>Buses</a></li>
+       <li><a href="http://127.0.0.1:8000/admin/routes"><i class="fa fa-map-marker" aria-hidden="true" style="padding-right:10px;"class="icon"></i>Routes</a></li>
 
       </ul>
       </div>
@@ -331,7 +331,7 @@ transform:scale(1.01);
 <td style="padding:5px 30px;width:15vw;">
 <h6>{{flight.from_p}}-{{flight.to_p}}</h6>
 {% comment %} <div class="loginbtn">
-             <input class="btn" type="submit" name="" value="Book" onclick="window.location.href='http://127.0.0.1:8000/login/{{userId}}/{{email}}/flights/book/?c1={{flight.flight_schedule}}&c2={{passengers}}'">
+             <input class="btn" type="submit" name="" value="Book" onclick="window.location.href='http://127.0.0.1:8000/flights/book/?c1={{flight.flight_schedule}}&c2={{passengers}}'">
         </div> {% endcomment %}
 </td> 
 <td style="padding:5px 30px;width:10vw;">
